--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"ioredis": "^5.4.1",
 		"luxon": "^3.4.4",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
