Revert "update workflow"
This reverts commit dbf870e9704626b2379fc646b0dda4c30025c4dc.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,6 +27,7 @@ jobs:
 
       - name: build
         env:
+          BASE_PATH: '/${{ github.event.repository.name }}'
           REDIS_URI: ${{ secrets.REDIS_URI }}
         run: |
           npm run build
