handle env specific rendering

--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
 		"@types/luxon": "^3.4.2",
+		"@util/gh-user-profile": "file:../util.gh-user-profile",
+		"@vitejs/plugin-legacy": "^5.4.1",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
 		"ioredis": "^5.4.1",
 		"luxon": "^3.4.4",
 		"prettier": "^3.1.1",
