--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
 		"@types/luxon": "^3.4.2",
-		"@util/gh-user-profile": "file:../util.gh-user-profile",
+		"@util/gh-user-profile": "file:packages/gh-user-profile",
 		"@vitejs/plugin-legacy": "^5.4.1",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
