[wip] refactor ui

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = git@github.com:dinosaw44/util.gh-user-profile.git
 [submodule "packages/ui"]
 	path = packages/ui
-	url = git@github.com:dinosaw44/kit.ui.git
+	url = git@github.com:dinosaw44/kit.ui.svelte.git
