--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: 'true'
+          submodules: recursive
           token: ${{ secrets.COMMON_ACCESS_TOKEN }}
           
       - name: Install Node.js
